--- a/04rekursjon.tex
+++ b/04rekursjon.tex
@@ -1,5 +1,5 @@
 \section{Rekursjon}
-Rekursjon går ut på å bruke samme funksjon flere ganger, med et subsett av opprinnelig input. De fleste algoritmer kan implementeres enter iterativt (et funksjonskall som løser problemet), eller rekursivt. Et godt eksempel på dette er fakultet. 
+Rekursjon går ut på å bruke samme funksjon flere ganger, med et subset av opprinnelig input. De fleste algoritmer kan implementeres enter iterativt (et funksjonskall som løser problemet), eller rekursivt. Et godt eksempel på dette er fakultet. 
 
 \subsection{Masterteoremet}
 Motivasjonen for å lære seg masterteoremet er for å enkelt kunne løse rekurrenser. Ta for eksempel analysen av Mergesort. Hvis vi antar at den originale listen inneholder en 2’er-potens antall elementer vil vi for hvert kall til Mergesort få to nye metodekall med halve listen i hver, helt til antall elementer i listen er lik en. Det vil si at $T(n) = 2T(n/2)$ så lenge $|n| > 1$. 
